Changed default display service name

--- a/modules/config/src/main/resources/reference.conf
+++ b/modules/config/src/main/resources/reference.conf
@@ -49,7 +49,7 @@ sclera {
             nlpservice = "OPENNLP"
             predicaterowlabelerservice = "MATPREDLABELER"
             sequencematcherservice = "NFAMATCHER"
-            displayservice = "WEBSERVER"
+            displayservice = "WEBDISPLAY"
         }
     }
 }
