Replaced SCLERA_HOME with SCLERA_ROOT
Also, removed the hardcoded value, defaulting to ~/.sclera

--- a/modules/config/src/main/resources/reference.conf
+++ b/modules/config/src/main/resources/reference.conf
@@ -4,8 +4,9 @@ sclera {
     storage {
         encryptkey = "contact@sclera"
         encryptkey = ${?SCLERA_ENCRYPT_KEY}
-        homedir = ${user.home}/.sclera
-        homedir = ${?SCLERA_HOME}
+        rootdir = ${user.home}/.sclera
+        rootdir = ${?SCLERA_ROOT}
+        homedir = ${sclera.storage.rootdir}/home
         assetdir = ${sclera.storage.homedir}/assets
         datadir = ${sclera.storage.assetdir}/data
         objectdir = ${sclera.storage.assetdir}/objects
