Explicitly merge with the config file under SCLERA_ROOT

--- a/modules/config/src/main/resources/reference.conf
+++ b/modules/config/src/main/resources/reference.conf
@@ -12,6 +12,10 @@ sclera {
         objectdir = ${sclera.storage.assetdir}/objects
     }
 
+    app {
+        conf = ${sclera.storage.rootdir}/config/sclera.conf
+    }
+
     location {
         schema {
             version = "3.0"
